Created HTML and CSS for calendar tables

--- a/index.html
+++ b/index.html
@@ -13,20 +13,59 @@
 		<link rel="stylesheet" type="text/css" href="css/sheets-of-paper-a5.css">
 	</head>
 	<body class="document">
-		<div class="page" contenteditable="true">
-			<p>First <code>.page</code> element</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-			<p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+		<div class="page address">
+			<p>
+				Name<br>
+				First address line<br>
+				Second address line<br>
+				Town/city<br>
+				County<br>
+				Postcode
+			</p>
 		</div>
-		<div class="page" contenteditable="true">
-			<p>Second <code>.page</code> element</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-			<p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+		<div class="page body">
+			<h1>New Bin Days</h1>
+			<div class="wrapper">
+		        <div class="pricing-table group">
+		            <div class="block personal fl">
+		                <h2 class="title">Refuse</h2>
+		                <div class="content">
+		                    <p class="price">
+		                        <span>Mon</span>
+		                    </p>
+		                    <p class="hint">Week 1</p>
+		                </div>
+		            </div>
+		            <div class="block professional fl">
+		                <h2 class="title">Recycling</h2>
+		                <div class="content">
+		                    <p class="price">
+		                        <span>Tue</span>
+		                    </p>
+		                    <p class="hint">Week 1</p>
+		                </div>
+		            </div>
+					<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		            <div class="block business fl">
+		                <h2 class="title">Garden Waste</h2>
+		                <div class="content">
+		                    <p class="price">
+		                        <span>Wed</span>
+		                    </p>
+		                    <p class="hint">Week 2</p>
+		                </div>
+		            </div>
+		            <div class="block business fl">
+		                <h2 class="title">Glass</h2>
+		                <div class="content">
+		                    <p class="price">
+		                        <span>Thu</span>
+		                    </p>
+		                    <p class="hint">Week 2</p>
+		                </div>
+		            </div>
+		        </div>
+		    </div>
 		</div>
-		<script type="text/javascript">
-		// window.print();
-		</script>
 	</body>
 </html>
