Cleaned up CSS and HTML

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	</head>
 	<body class="document">
 		<div class="page address">
+			<img class="stamp" src="stamp.png" alt="stamp"/>
 			<p>
 				Name<br>
 				First address line<br>
@@ -23,45 +24,44 @@
 				Postcode
 			</p>
 		</div>
-		<div class="page body">
+		<div class="page calendar">
 			<h1>New Bin Days</h1>
-			<div class="wrapper">
-		        <div class="pricing-table group">
-		            <div class="block personal fl">
+		        <div class="calendar-table group">
+		            <div class="block refuse fl">
 		                <h2 class="title">Refuse</h2>
 		                <div class="content">
-		                    <p class="price">
+		                    <p class="day">
 		                        <span>Mon</span>
 		                    </p>
-		                    <p class="hint">Week 1</p>
+		                    <p class="week">Week 1</p>
 		                </div>
 		            </div>
-		            <div class="block professional fl">
+		            <div class="block recycling fl">
 		                <h2 class="title">Recycling</h2>
 		                <div class="content">
-		                    <p class="price">
+		                    <p class="day">
 		                        <span>Tue</span>
 		                    </p>
-		                    <p class="hint">Week 1</p>
+		                    <p class="week">Week 1</p>
 		                </div>
 		            </div>
 					<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-		            <div class="block business fl">
+		            <div class="block garden fl">
 		                <h2 class="title">Garden Waste</h2>
 		                <div class="content">
-		                    <p class="price">
+		                    <p class="day">
 		                        <span>Wed</span>
 		                    </p>
-		                    <p class="hint">Week 2</p>
+		                    <p class="week">Week 2</p>
 		                </div>
 		            </div>
-		            <div class="block business fl">
+		            <div class="block glass fl">
 		                <h2 class="title">Glass</h2>
 		                <div class="content">
-		                    <p class="price">
+		                    <p class="day">
 		                        <span>Thu</span>
 		                    </p>
-		                    <p class="hint">Week 2</p>
+		                    <p class="week">Week 2</p>
 		                </div>
 		            </div>
 		        </div>
